Fix manifest name

--- a/missbruk/manifest.json
+++ b/missbruk/manifest.json
@@ -1,19 +1,13 @@
 {
-
   "description": "Räknar ut apk på drycker i systembolagets sortiment.",
   "manifest_version": 2,
-  "name": "APK_Systembolaget",
+  "name": "APK Systembolaget",
   "version": "0.1",
-  "homepage_url": "https://github.com/mdn/webextensions-examples/blob/master/borderify/manifest.json",
-  "icons": {
-    "48": "icons/border-48.png"
-  },
-
+  "homepage_url": "https://github.com/antonnyst/aa-lule",
   "content_scripts": [
     {
       "matches": ["*://*.systembolaget.se/*"],
       "js": ["alkoholist.js"]
     }
   ]
-
 }
