--- a/missbruk/manifest.json
+++ b/missbruk/manifest.json
@@ -1,7 +1,7 @@
 {
   "description": "Räknar ut apk på drycker i systembolagets sortiment.",
   "manifest_version": 2,
-  "name": "APK Systembolaget",
+  "name": "Missbruk - Systembolagets APK",
   "version": "0.1",
   "homepage_url": "https://github.com/antonnyst/aa-lule",
   "content_scripts": [
