--- a/bottenskrap/Cargo.toml
+++ b/bottenskrap/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+surf = "2.3.2"
+futures = "0.3"
+http-types = "2.12.0"
+serde_json = "1.0.87"
