--- a/missbruk/manifest.json
+++ b/missbruk/manifest.json
@@ -10,7 +10,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.systembolaget.se/*"],
-      "js": ["sortiment.js, produkt.js"]
+      "js": ["sortiment.js", "produkt.js"]
     }
   ]
 }
