--- a/missbruk/manifest.json
+++ b/missbruk/manifest.json
@@ -1,8 +1,8 @@
 {
-  "description": "Räknar ut apk på drycker i systembolagets sortiment.",
+  "description": "Räknar ut apk och förbättrar systembolagets hemsida.",
   "manifest_version": 2,
   "name": "Missbruk - Systembolagets APK",
-  "version": "0.2",
+  "version": "0.2.1",
   "homepage_url": "https://github.com/antonnyst/aa-lule/tree/main/missbruk",
   "icons": {
     "96": "icons/missbruk-96.png"
