--- a/bottenskrap/Cargo.toml
+++ b/bottenskrap/Cargo.toml
@@ -10,4 +10,5 @@ tokio = { version = "1", features = ["full"] }
 surf = "2.3.2"
 http-types = "2.12.0"
 serde_json = "1.0.87"
-mongodb = "2.3.1"
+diesel = { version = "2.0.0", features = ["postgres"] }
+dotenvy = "0.15"
